Fixed title section h1/breadcrumb overlap.

--- a/health/sass/_shame.scss
+++ b/health/sass/_shame.scss
@@ -381,8 +381,10 @@
 td, th,
 .view,
 .document-accessibility-form {
-  p:last-of-type {
-    margin-bottom: 0;
+  .page-layout { // only in content section
+    p:last-of-type {
+      margin-bottom: 0;
+    }
   }
 }
 
